fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ h4 {
   font-size: 15px;
   font-style: italic;
   font-weight: bold;
-  padding-top: 15%;
+  padding-top: 2%;
   padding-bottom: 3%;
 }
 ul{
